@@ -1,0 +1,30 @@
+#-------------------------------------
+# File and Version Information:
+#  $Id$
+#
+# Description:
+#  SConscript file for package PSCalib
+#-------------------------------------
+
+# Do not delete following line, it must be present in
+# SConscript file for any SIT project
+Import('*')
+
+#
+# For the standard SIT packages which build libraries, applications,
+# and Python modules it is usually sufficient to call
+# standardSConscript() function which defines rules for all
+# above targets. Many standard packages do not need any special options,
+# but those which need can modify standardSConscript() behavior using
+# a number of arguments, here is a complete list:
+#
+# LIBS - list of additional libraries needed by this package
+# BINS - dictionary of executables and their corresponding source files
+# TESTS - dictionary of test applications and their corresponding source files
+# SCRIPTS - list of scripts in app/ directory
+# UTESTS - names of the unit tests to run, if not given then all tests are unit tests
+# PYEXTMOD - name of the Python extension module, package name used by default
+#
+#
+#standardSConscript(UTESTS=['TestCalibFileFinder'], DOCGEN="doxy-all psana-modules-doxy pyana-ref", CCFLAGS="-std=gnu++11")
+standardSConscript()
